# XRayC2-rust

./: .gitignore  README.md
c2/: controller.py
implant/: Cargo.toml  release.sh
implant/src/: main.rs  model.rs  utils.rs
