[package]
name = "implant"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

# We will use reqwest for *everything* (client, requests, and headers)
# Features: "blocking" for sync client, "json" for helpers
reqwest = { version = "0.12", features = ["blocking", "json"] }
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
